<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FiltresActivity" >

    <LinearLayout
        android:id="@+id/LinearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/LinearLayout3"
            android:layout_width="238dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/chbProximitat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/filtresProximitat" />

            <SeekBar
                android:id="@+id/seekBar1"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.04"
                android:max="14000"
                android:progress="1" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtKm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filtresKm" />

    </LinearLayout>

    <TextView
        android:id="@+id/lblSeparador"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="#FF000000"
        android:text="" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/chbMonumento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="70dp"
                android:text="@string/filtresMonument" />

            <CheckBox
                android:id="@+id/chbGratuito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filtresGratuit" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/chbCultura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filtresCultura" />

            <CheckBox
                android:id="@+id/chbDeporte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filtresEsportiu" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/chbMusica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filtresMusica" />

            <CheckBox
                android:id="@+id/chbArte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filtresArt" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>
    </TableLayout>
</LinearLayout>
