<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.40"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="176dp"
            android:layout_height="178dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/lblTitolConta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/nomUsuari"
                android:textSize="@dimen/Titols" />

            <TextView
                android:id="@+id/lblPuntsConta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/puntsUsuari"
                android:textSize="@dimen/Titols" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="184dp" >

            <ImageView
                android:id="@+id/imgAvatarConta"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lblMedalles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medalles"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:gravity="end|fill"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imgAchievementQuest"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@drawable/quest_logo" />

        <ImageView
            android:id="@+id/imgAchievementVisita"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@drawable/visita_logo" />

        <ImageView
            android:id="@+id/imgAchievementCamera"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_launcher" />
        <ProgressBar
                android:id="@+id/pbSincronitzar"
                android:layout_width="40dp"
                android:layout_height="match_parent" />

    </LinearLayout>

    <Button
        android:id="@+id/cmbAfegirAmistatConta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:enabled="false"
        android:textColor="#FFFFFF"
        android:text="@string/afegirAmistatConta"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/cmbLlocsVisitatsConta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                    android:background="@drawable/shape"
            		android:textColor="#FFFFFF"       
            
            android:text="@string/llocsVisitatsConta" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/cmbRankingConta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                    android:background="@drawable/shape"
            		android:textColor="#FFFFFF"       
            
            android:text="@string/rankingConta" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/cmbAmicsConta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                    android:background="@drawable/shape"
            		android:textColor="#FFFFFF"       
            
            android:text="@string/amicsConta" />
    </LinearLayout>


</LinearLayout>