<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CongratulationsActivity" >

    <LinearLayout
        android:id="@+id/Congratulations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lblCongratulations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/congratulations_message" />

    </LinearLayout>
 <TextView
        android:id="@+id/lblSeparador"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:background="#FF000000"
        android:text="" />
    <LinearLayout
        android:id="@+id/Opina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/cmbOpina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                    android:background="@drawable/shape"
            		android:textColor="#FFFFFF"       
            
            android:text="@string/congratulations_opina" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/lblOpinaPoints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/points_opina"
            android:textSize="16sp" />

    </LinearLayout>
 <TextView
        android:id="@+id/lblSeparador"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:background="#FF000000"
        android:text="" />
    <LinearLayout
        android:id="@+id/Foto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/cmbFoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                    android:background="@drawable/shape"
            		android:textColor="#FFFFFF"       
            
            android:text="@string/congratulations_foto" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/lblFotoPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/points_foto"
            android:textSize="16sp" />

    </LinearLayout>
 <TextView
        android:id="@+id/lblSeparador"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:background="#FF000000"
        android:text="" />
    <LinearLayout
        android:id="@+id/Questionari"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/cmbQuestionari"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                    android:background="@drawable/shape"
            		android:textColor="#FFFFFF"       
            
            android:text="@string/congratulations_questionari" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout03"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/lblQuestionariPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/points_questionari"
            android:textSize="16sp" />

    </LinearLayout>
 <TextView
        android:id="@+id/lblSeparador"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:background="#FF000000"
        android:text="" />
</LinearLayout>