<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contentsMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainMenuActivity" >

    <Button
        android:id="@+id/cmbExplora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/shape"
        		android:textColor="#FFFFFF"       
        android:text="@string/mainExplora" />

    <Button
        android:id="@+id/cmbConta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
                android:background="@drawable/shape"
       		android:textColor="#FFFFFF"     
       		                android:layout_marginBottom="5dp"
       		  
       
        android:text="@string/mainConta" />

    <Button
        android:id="@+id/cmbRanking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
                android:background="@drawable/shape"
        		android:textColor="#FFFFFF" 
        		                android:layout_marginBottom="5dp"
        		      
        
        android:text="@string/mainRanking" />

    <Button
        android:id="@+id/cmbLogOutMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
                android:background="@drawable/shape"
                                android:layout_marginBottom="5dp"
                
		android:textColor="#FFFFFF"       
        android:text="@+string/logout" />

    <Button
        android:id="@+id/cmdInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="5dp"
        android:background="@drawable/shape"
        android:gravity="center_vertical|center_horizontal"
        android:text="@+string/informacion"
        android:textColor="#FFFFFF" />

</LinearLayout>